# Facebook_api_registration

./: .env  docker-compose.prod.yml  instruction.txt
backend/app/: .env  Dockerfile  manage.py  pyproject.toml
backend/app/drf_api/: apps.py  serialirers.py  urls.py  views.py
backend/app/facebook_drf/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/facebook_users/: admin.py  apps.py  models.py  random_user.py
backend/app/facebook_users/migrations/: 0001_initial.py  0002_alter_facebookusers_email_and_more.py  0003_facebookusers_is_register_fb.py  0004_genderusers_facebookusers_birthday_and_more.py  0005_alter_facebookusers_poster.py
backend/app/tools/: extensions.py  generate_pwd.py  generate_user.py  mailslurp.py  playwright_dev.py
backend/nginx/: Dockerfile  default.conf
backend/postgres/: init.sql
backend/tor/: Dockerfile
